nexus/embedded/session.h

typedef struct nexus_embedded_session_s nexus_embedded_session;
typedef struct nexus_embedded_config {
    uint32_t struct_size;
    cap_model_runtime* model;      /* caller keeps model alive while session exists */
    uint32_t flags;                /* reserved, must be 0 for now */
} nexus_embedded_config;
typedef struct nexus_embedded_tick_result {
    uint32_t struct_size;
    uint64_t chunk_id;
    double latency_ms;
    uint64_t written;
} nexus_embedded_tick_result;
int  nexus_embedded_open(const nexus_embedded_config*,
                         nexus_embedded_session** out);
void nexus_embedded_close(nexus_embedded_session*);
const char*        nexus_embedded_last_error(nexus_embedded_session*);
int nexus_embedded_set_input(nexus_embedded_session*, const char* port,
                             const void* data, uint64_t bytes, int stream);
int nexus_embedded_swap(nexus_embedded_session*, const char* port,
                        const void* data, uint64_t bytes, int stream);
int nexus_embedded_tick(nexus_embedded_session*,
                        nexus_embedded_tick_result* result);
int nexus_embedded_get_output(nexus_embedded_session*, const char* port,
                              void* out, uint64_t capacity,
                              uint64_t* written, int stream);
int nexus_embedded_snapshot(nexus_embedded_session*, const char* name);
int nexus_embedded_restore(nexus_embedded_session*, const char* name);
uint64_t nexus_embedded_capsule_count(nexus_embedded_session*);