host/include/capsule/model_runtime.h

enum cap_model_port_update {
    CAP_MODEL_PORT_SWAP = 0,
    CAP_MODEL_PORT_STAGED = 1,
    CAP_MODEL_PORT_SETUP = 2
};
typedef struct cap_model_runtime {
    cap_backend* backend;        /* initialized; pass to cap_ctx_create     */

    const cap_model_port*  ports;  uint64_t n_ports;
    const cap_model_stage* stages; uint64_t n_stages;
    cap_region* regions;           uint64_t n_regions;

    /* Prepared from the stage DAG at adoption: cadence 1/1 CAP_EVERY stages
     * plus the after-edges, ready for cap_drive_tick. */
    cap_schedule schedule;

    /* Pre-created by the adapter, one entry per stage (null where no later
     * stage depends on it). With these, cap_model_tick is ALLOCATION-FREE —
     * a true hot verb (cap_drive_tick remains the allocating fallback for
     * hand-built runtimes that leave this null). */
    cap_event* stage_events;

    uint64_t fingerprint;
    const char* identity;

    /* Producer verbs, passed through verbatim (the hot contract applies).
     * Any entry may be null — probe before calling. */
    void* self;
    int (*set_input)(void* self, uint32_t port, const void* data,
                     uint64_t bytes, int stream);
    int (*get_output)(void* self, uint32_t port, void* out, uint64_t capacity,
                      uint64_t* written, int stream);   /* bytes */
    int (*prepare)(void* self, uint32_t graph, cap_shape_key key); /* WARM */
    int (*step)(void* self);
    const char* (*last_error)(void* self);

    void* impl;                  /* adapter internals; owned by the adapter */
} cap_model_runtime;
/* Port lookup by name: index into `ports`, or negative when absent. */
int cap_model_find_port(const cap_model_runtime*, const char* name);
uint64_t              cap_model_fingerprint(const cap_model_runtime*);
const char*           cap_model_identity   (const cap_model_runtime*);
uint64_t              cap_model_port_bytes (const cap_model_runtime*, uint64_t port);
uint32_t              cap_model_port_update(const cap_model_runtime*, uint64_t port);